# ai-validation-tad-poc

./: .gitignore  .pre-commit-config.yaml  Algoritmebeschrijvingen.csv  README.md  amt  pyproject.toml  tad
.devcontainer/: devcontainer.json
amt_core/: main.py
amt_core/loaders/: data_loader.py  model_loader.py
amt_core/tools/: arg_parser.py  assessment_tool.py  report_tool.py
assessments/: general_info.json  iama.json
cards/: system_card.yaml
cards/assessments/: iama.yaml
cards/models/: logres_iris.yaml  model_card.yaml
schemas/: answers.json  questions.json
tad/: __main__.py
tad_core/: main.py
tad_core/tools/: arg_parser.py  questionnaire_tool.py  report_tool.py  shap_tool.py  transform_tool.py
testdata/data/: customer_churn_data.csv  sample_bc_credit_data_no_default.sav
tests/: shap.yaml
ui/: output.html  reference.html  reference2.html  template.html
ui/assets/: SearchBar.ec140cbc.css  SelectedFilters.b37a1b1a.css  _lars_.d2187098.css  amt.css  amt.js  default.29217680.css  entry.164a9c93.css  entry.41b4f7b5.js  getLayoutConfig.ca44fce8.css  index.0ec2466a.css  index.6046c242.css  index.e9d65209.css  index.f1eb9e79.css  inference.js  matomo.js  styles.css  tad.css  tad.js
